kubernetes/ara/middleware-basic-auth.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware

metadata:
  name: basic-auth

spec:
  basicAuth:
    secret: ara-basic-auth
    realm: ARA API - Authentication Required
