kubernetes/ara/patch-deployment-password.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: ara-ara

spec:
  template:
    spec:
      containers:
      - name: ara
